--- a/index.html
+++ b/index.html
@@ -8,27 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
-    /* 🔹 Normalize root font-size so rem is consistent everywhere */
-    html {
-      font-size: 16px; /* default desktop */
-    }
-
-    @media (max-width: 1024px) {
-      html { font-size: 15px; } /* tablets */
-    }
-
-    @media (max-width: 768px) {
-      html { font-size: 14px; } /* large mobile */
-    }
-
-    @media (max-width: 480px) {
-      html { font-size: 13px; } /* small mobile portrait */
-    }
-
-    @media (max-height: 500px) {
-      html { font-size: 13px; } /* mobile landscape (short height) */
-    }
-
     body, html {
       margin: 0;
       padding: 0;
@@ -90,7 +69,7 @@
     }
 
     h1 {
-      font-size: 3.5rem;
+      font-size: clamp(24px, 4vw, 56px);
       margin-bottom: 12px;
       text-shadow: 0px 2px 8px rgba(0,0,0,0.7);
       opacity: 0;
@@ -99,7 +78,7 @@
     }
 
     p {
-      font-size: 1.8rem;
+      font-size: clamp(14px, 2.2vw, 28px);
       margin: 4px 0;
       line-height: 1.4;
       text-shadow: 0px 2px 6px rgba(0,0,0,0.7);
@@ -113,11 +92,11 @@
 
     .btn-instagram {
       display: inline-block;
-      padding: 12px 24px;
+      padding: clamp(6px, 1.2vw, 12px) clamp(14px, 2vw, 24px);
       background: #E1306C;
       color: white;
       text-decoration: none;
-      font-size: 1.5rem;
+      font-size: clamp(14px, 2vw, 24px);
       border-radius: 50px;
       transition: background 0.3s, transform 0.2s;
       margin-top: 18px;
@@ -148,14 +127,14 @@
     }
 
     .footer-logo {
-      width: 150px;
+      width: clamp(80px, 12vw, 150px);
       height: auto;
       margin-bottom: 8px;
       filter: drop-shadow(0px 2px 6px rgba(0,0,0,0.6));
     }
 
     .copyright {
-      font-size: 1.3rem;
+      font-size: clamp(12px, 1.6vw, 21px);
     }
 
     /* Animations */
@@ -177,7 +156,7 @@
       100% { opacity: 1; transform: translateY(0); }
     }
 
-    /* Landscape mobile special fix */
+    /* Landscape mobile fix */
     @media (max-height: 500px) {
       .content {
         justify-content: flex-start;
