--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <h1>Toon-Mo | ตูนโม๊ะ</h1>
     <p>รับเอาคิววอคอิน รับเอาโต๊ะ ร้าน The Moon Ladkrabang!</p>
     <p>สนใจติดต่อสอบถามเพิ่มเติมและเรทราคาได้ที่ Instagram</p>
-    <a href="https://instagram.com/beerznakub" target="_blank" class="btn-instagram">บริการผ่าน Instagram</a>
+    <a href="https://www.instagram.com/_toon.mo/" target="_blank" class="btn-instagram">บริการผ่าน Instagram</a>
 
     <footer>
       <img src="images/themoon-logo.svg" alt="The Moon Logo" class="footer-logo">
@@ -292,4 +292,5 @@
   </script>
 </body>
 </html>
+
 
