--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@
         <button class="modal-close-btn" aria-label="Close menu">&times;</button>
         <img src="images/themoon_menu.JPG" alt="The Moon Drink Menu">
         <div class="modal-actions">
-            <a href="images/themoon_menu.JPG" download="themoon_menu.JPG" class="modal-btn download-btn">Download</a>
-            <button class="modal-btn close-action-btn">Close</button>
+            <a href="images/themoon_menu.JPG" download="themoon_menu.JPG" class="modal-btn download-btn">ดาวน์โหลด</a>
+            <button class="modal-btn close-action-btn">ปิด</button>
         </div>
     </div>
   </div>
@@ -622,4 +622,5 @@
   </script>
 </body>
 </html>
+
 
